--- a/toolchain/crosstool/RaspberryPi1.config
+++ b/toolchain/crosstool/RaspberryPi1.config
@@ -613,22 +613,22 @@ CT_GCC_PATCH_GLOBAL=y
 # CT_GCC_PATCH_LOCAL_BUNDLED is not set
 # CT_GCC_PATCH_NONE is not set
 CT_GCC_PATCH_ORDER="global"
-# CT_GCC_V_13 is not set
-CT_GCC_V_12=y
+CT_GCC_V_13=y
+# CT_GCC_V_12 is not set
 # CT_GCC_V_11 is not set
 # CT_GCC_V_10 is not set
 # CT_GCC_V_9 is not set
 # CT_GCC_V_8 is not set
 # CT_GCC_V_7 is not set
 # CT_GCC_V_6 is not set
-CT_GCC_VERSION="12.3.0"
+CT_GCC_VERSION="13.2.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_13_or_older=y
-CT_GCC_older_than_13=y
+CT_GCC_later_than_13=y
+CT_GCC_13_or_later=y
 CT_GCC_later_than_12=y
 CT_GCC_12_or_later=y
 CT_GCC_later_than_11=y
@@ -707,7 +707,7 @@ CT_CC_LANG_ADA=y
 # CT_CC_LANG_OBJC is not set
 # CT_CC_LANG_OBJCXX is not set
 CT_CC_LANG_GOLANG=y
-CT_CC_LANG_OTHERS=""
+CT_CC_LANG_OTHERS="m2"
 # end of C compiler
 
 #
