Went up a directory level
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21520 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/Makefile
+++ b/toolchain/metapackages/Makefile
@@ -21,7 +21,7 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 OSNAME		?= unknown
-MUNTSOS		?= ../../..
+MUNTSOS		?= ../..
 BOARDNAME	?= BeagleBone
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
