Apply patch to fix __libc_csu_init error.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21526 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -77,6 +77,7 @@ $(FPC_DIST):
 
 src.done: $(FPC_DIST)
 	tar xzf $^
+	cd $(FPC_SRCDIR) && patch -b -p1 <../freepascal.patch
 	touch $@
 
 ################################################################################
