--- a/toolchain/rpms/muntsos-toolchains/Makefile
+++ b/toolchain/rpms/muntsos-toolchains/Makefile
@@ -27,7 +27,7 @@ BUILDNUM	?= 1
 RPMTARGET	?= unknown
 RPMSUFFIX	?= unknown
 RPMTUPLE	?= unknown
-RPMNAME		:= muntsos-dev-$(RPMSUFFIX)
+RPMNAME		:= muntsos-$(RPMSUFFIX)
 RPMVER		:= $(shell date +%Y.%j).$(BUILDNUM)
 RPMDIR		:= $(RPMNAME)
 RPMFILE		:= $(RPMNAME)-$(RPMVER)-$(BUILDNUM).x86_64.rpm
