Updated for GCC 13.2.0
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21538 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/BeagleBone.config
+++ b/bootkernel/kernel/BeagleBone.config
@@ -4,10 +4,10 @@
 #
 
 #
-# Compiler: arm-linux-gnueabihf-gcc (crosstool-NG 1.25.0) 10.3.0
+# Compiler: arm-muntsos-linux-gnueabihf-gcc (crosstool-NG 1.26.0) 13.2.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=100300
+CONFIG_GCC_VERSION=130200
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
@@ -3430,7 +3430,9 @@ CONFIG_LSM="lockdown,yama,loadpin,safesetid,integrity"
 #
 # Memory initialization
 #
+CONFIG_CC_HAS_AUTO_VAR_INIT=y
 CONFIG_INIT_STACK_NONE=y
+# CONFIG_INIT_STACK_ALL is not set
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_INIT_ON_FREE_DEFAULT_ON=y
 # end of Memory initialization
